@@ -16,6 +16,8 @@
     or increase the maximum attempts MOBAC tries to download a tile in case 
     of errors occur while download or HTTP response is not as expected.
  + Logging verboseness now configurable for the current session via GUI  
+ ! PaperAtlas: NullPointerException when WGS Grid=off has been fixed
+
 
 1.9.1 (2011-09-09) 
  ! Opening settings dialog: ClassCastException on Linux/OpenJDK
